--- a/foundry.toml
+++ b/foundry.toml
@@ -12,8 +12,8 @@ optimizer_runs = 8
 runs = 1000
 
 [rpc_endpoints]
-mainnet = "https://base-mainnet.g.alchemy.com/v2/${ALCHEMY_API_KEY}"
-sepolia = "${BASE_SEPOLIA_RPC_URL}"
+mainnet = "https://polygon-mainnet.g.alchemy.com/v2/${ALCHEMY_API_KEY}"
+amoy = "${AMOY_RPC_URL}"
 anvil = "http://localhost:8545"
 
 [profile.rpc_storage_caching]
@@ -21,5 +21,5 @@ chains = "all"  # or specific chain IDs
 endpoints = "all"  # or specific URLs
 
 [etherscan]
-mainnet = { key = "${ETHERSCAN_API_KEY}", chain = "mainnet" }
-sepolia = { key = "${ETHERSCAN_API_KEY}", chain = "sepolia" }
+mainnet = { key = "${POLYGONSCAN_API_KEY}", chain = "mainnet" }
+amoy = { key = "${POLYGONSCAN_API_KEY}", chain = "amoy" }
