--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "build:optimized": "FOUNDRY_PROFILE=optimized forge build",
     "coverage": "forge coverage --report lcov --ffi",
     "coverage:html": "genhtml lcov.info -o coverage-report ",
-    "deploy:mainnet": "bash -c 'source .env && forge script Deploy --broadcast --chain mainnet --private-key $MAINNET_DEPLOYER_PK'",
-    "deploy:sepolia": "bash -c 'source .env && forge script Deploy --broadcast --chain sepolia --private-key $SEPOLIA_DEPLOYER_PK'",
+    "deploy:mainnet": "bash -c 'source .env && forge script script/DeployLendefiDAO.s.sol:DeployLendefiDAO --broadcast --chain polygon --rpc-url polygon --private-key $AMOY_DEPLOYER_PK --verify --verifier etherscan --etherscan-api-key $POLYGONSCAN_API_KEY --ffi'",
+    "deploy:amoy": "bash -c 'source .env && forge script script/DeployLendefiDAO.s.sol:DeployLendefiDAO --broadcast --chain amoy --rpc-url amoy --private-key $AMOY_DEPLOYER_PK --verify --verifier etherscan --etherscan-api-key $POLYGONSCAN_API_KEY --ffi'",
     "lint:check": "npm run lint:sol-logic && forge fmt --check",
     "lint:fix": "sort-package-json && forge fmt && npm run lint:sol-tests --fix && npm run lint:sol-logic --fix",
     "lint:natspec": "npx @defi-wonderland/natspec-smells --config natspec.config.js",
