--- a/foundry.toml
+++ b/foundry.toml
@@ -12,7 +12,7 @@ optimizer_runs = 8
 runs = 1000
 
 [rpc_endpoints]
-mainnet = "https://polygon-mainnet.g.alchemy.com/v2/${ALCHEMY_API_KEY}"
+polygon = "https://polygon-mainnet.g.alchemy.com/v2/${ALCHEMY_API_KEY}"
 amoy = "${AMOY_RPC_URL}"
 anvil = "http://localhost:8545"
 
@@ -21,5 +21,5 @@ chains = "all"  # or specific chain IDs
 endpoints = "all"  # or specific URLs
 
 [etherscan]
-mainnet = { key = "${POLYGONSCAN_API_KEY}", chain = "mainnet" }
+polygon = { key = "${POLYGONSCAN_API_KEY}", chain = "polygon" }
 amoy = { key = "${POLYGONSCAN_API_KEY}", chain = "amoy" }
